--- a/PolarizationAnalyzer/PolarizationAnalyzer.csproj
+++ b/PolarizationAnalyzer/PolarizationAnalyzer.csproj
@@ -54,11 +54,11 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="NewForm.cs">
+    <Compile Include="Stokes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="NewForm.Designer.cs">
-      <DependentUpon>NewForm.cs</DependentUpon>
+    <Compile Include="Stokes.Designer.cs">
+      <DependentUpon>Stokes.cs</DependentUpon>
     </Compile>
     <Compile Include="PMD.cs">
       <SubType>Form</SubType>
@@ -72,8 +72,8 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="NewForm.resx">
-      <DependentUpon>NewForm.cs</DependentUpon>
+    <EmbeddedResource Include="Stokes.resx">
+      <DependentUpon>Stokes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PMD.resx">
       <DependentUpon>PMD.cs</DependentUpon>
