--- a/PolarizationAnalyzer/PolarizationAnalyzer.csproj
+++ b/PolarizationAnalyzer/PolarizationAnalyzer.csproj
@@ -60,6 +60,12 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="polController.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="polController.Designer.cs">
+      <DependentUpon>polController.cs</DependentUpon>
+    </Compile>
     <Compile Include="Stokes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +83,9 @@
     <Compile Include="Utility.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="polController.resx">
+      <DependentUpon>polController.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Stokes.resx">
       <DependentUpon>Stokes.cs</DependentUpon>
